Added more options to server
