# modules/apiRest/src/main/scala/es/weso/server/RhoRoutes.scala
@@ -1,6 +1,6 @@
 package es.weso.server
 import es.weso.rdf.jena.RDFAsJenaModel
-import es.weso.schema.{DataFormats, Schemas}
+import es.weso.schema.{DataFormats, Schemas, ValidationTrigger}
 import org.http4s.dsl.{BadRequest, Ok, OptionalQueryParamDecoderMatcher, QueryParamDecoderMatcher}
 import org.http4s.rho.{param, _}
 import org.http4s.twirl._
@@ -47,6 +47,13 @@ class RhoRoutes extends RhoService {
     Ok(json)
   }
 
+  "Available trigger modes" **
+    GET / api / "schema/triggerModes" |>> { () =>
+    val triggerModes = ValidationTrigger.triggerValues.map(_._1)
+    val json = Json.fromValues(triggerModes.map(Json.fromString(_)))
+    Ok(json)
+  }
+
   "Available data formats" **
     GET / api / "data/formats" |>> { () =>
     val formats = DataFormats.formatNames
@@ -66,14 +73,22 @@ class RhoRoutes extends RhoService {
     param[String]("dataFormat") &
     param[String]("schema") &
     param[String]("schemaFormat") &
-    param[String]("schemaEngine") |>> {
+    param[String]("schemaEngine") &
+    param[String]("triggerMode") &
+    param[String]("node") &
+    param[String]("shape") |>> {
      (data: String,
       dataFormat: String,
       schema: String,
       schemaFormat: String,
-      schemaEngine: String
-      ) =>
-    validate(data,dataFormat,schema,schemaFormat,schemaEngine)
+      schemaEngine: String,
+      triggerMode: String,
+      node: String,
+      shape: String
+     ) =>
+    validate(data,dataFormat,
+      schema,schemaFormat,schemaEngine,
+      triggerMode,node,shape)
   }
 
   "GET Validate" **
@@ -82,33 +97,124 @@ class RhoRoutes extends RhoService {
       param[String]("dataFormat") &
       param[String]("schema") &
       param[String]("schemaFormat") &
-      param[String]("schemaEngine") |>> {
+      param[String]("schemaEngine") &
+      param[String]("triggerMode") &
+      param[String]("node") &
+      param[String]("shape")|>> {
        (data: String,
         dataFormat: String,
         schema: String,
         schemaFormat: String,
-        schemaEngine: String
-       ) =>
-    validate(data,dataFormat,schema,schemaFormat,schemaEngine)
+        schemaEngine: String,
+        triggerMode: String,
+        node: String,
+        shape: String
+    ) =>
+    validate(data,dataFormat,
+      schema,schemaFormat,schemaEngine,
+      triggerMode, node, shape)
   }
+
+  "Convert RDF Data" **
+    GET / api / "data/convert" +?
+    param[String]("data") &
+    param[String]("dataFormat") &
+    param[String]("resultFormat") |>> {
+    (data: String,
+     dataFormat: String,
+     resultFormat: String
+    ) =>
+      convertData(data,dataFormat,resultFormat)
+  }
+
+  "Convert Schema" **
+    GET / api / "schema/convert" +?
+    param[String]("schema") &
+    param[String]("schemaFormat") &
+    param[String]("schemaEngine") &
+    param[String]("resultFormat") &
+    param[String]("resultEngine") |>> {
+    (schema: String,
+     schemaFormat: String,
+     schemaEngine: String,
+     resultFormat: String,
+     resultEngine: String
+    ) =>
+      convertSchema(schema,
+        schemaFormat,schemaEngine,
+        resultFormat,resultEngine)
+  }
+
+  def convertData(
+     data: String,
+     dataFormat: String,
+     resultFormat: String
+    ) = {
+     RDFAsJenaModel.fromChars(data, dataFormat, None) match {
+       case Failure(e) => BadRequest(s"Error reading rdf: $e\nRdf string: $data")
+       case Success(rdf) => {
+         val result = rdf.serialize(resultFormat)
+         Ok(result)
+       }
+  }
+  }
+
+  def convertSchema(
+    schema: String,
+    schemaFormat: String,
+    schemaEngine: String,
+    resultFormat: String,
+    resultEngine: String
+   ) = {
+     Schemas.fromString(schema, schemaFormat, schemaEngine, None) match {
+       case Failure(e) => BadRequest(s"Error reading schema: $e\n\nFormat: $schemaFormat\nEngine: $schemaEngine\nSchema string: $schema")
+       case Success(schema) => {
+         if (resultEngine == schemaEngine) {
+           schema.serialize(resultFormat) match {
+             case Failure(err) => BadRequest(s"Error serializing schema to $resultFormat: $err")
+             case Success(result) => Ok(result)
+           }
+         } else {
+           BadRequest(s"Conversion between engines not supported yet")
+         }
+       }
+         }
+   }
 
   def validate(data: String,
                dataFormat: String,
                schema: String,
                schemaFormat: String,
-               schemaEngine: String) = {
+               schemaEngine: String,
+               triggerMode: String,
+               maybeNode: String,
+               maybeShape: String
+              ) = {
     Schemas.fromString(schema, schemaFormat, schemaEngine, None) match {
       case Failure(e) => BadRequest(s"Error reading schema: $e\nString: $schema")
       case Success(schema) => {
         RDFAsJenaModel.fromChars(data, dataFormat, None) match {
           case Failure(e) => BadRequest(s"Error reading rdf: $e\nRdf string: $data")
           case Success(rdf) => {
-            val result = schema.validate(rdf)
-            val jsonResult = result.toJsonString2spaces
-            Ok(jsonResult)
+            val node =
+              if (maybeNode == "") None
+              else Some(maybeNode)
+            val shape =
+              if (maybeShape == "") None
+              else Some(maybeShape)
+            ValidationTrigger.findTrigger(triggerMode,node,shape,schema.pm) match {
+              case Left(err) => BadRequest(err)
+              case Right(trigger) => {
+                val result = schema.validateWithTrigger(rdf,trigger)
+                val jsonResult = result.toJsonString2spaces
+                Ok(jsonResult)
+              }
+            }
           }
         }
       }
     }
   }
+
+
 }
